# text-block-plugin

./: Cargo.toml  justfile
src/: lib.rs  sdk.rs
wai/: plugin.wai
