[package]
name = "text-block-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wai-bindgen-rust = "0.2.3"
plugin-sdk = { git = "https://github.com/t3m8ch-plugins/plugin-sdk.git", rev = "6f1808a" }

[build-dependencies]
plugin-sdk = { git = "https://github.com/t3m8ch-plugins/plugin-sdk.git", rev = "6f1808a" }
